# CHE1147_Final_Project

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/splits/fold_1/: y_train.parquet  y_val.parquet
data/processed/splits/fold_2/: y_train.parquet  y_val.parquet
data/processed/splits/fold_3/: y_train.parquet  y_val.parquet
data/processed/splits/fold_4/: y_train.parquet  y_val.parquet
data/processed/splits/fold_5/: y_train.parquet  y_val.parquet
data/processed/splits/hpo/: y_train.parquet  y_val.parquet
reports/cross-validation/: summary.csv
src/: config.py  dataset.py  experiments.py  features.py  hpo.py  main.py  parity_plots.py  parse.py  plots.py  shap_plots.py  split.py  test_comparisons.csv  test_predictions.csv
src/modeling/: predict.py  train.py
